# piperci-picli

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: index.rst  intro.rst
docs/source/developer/: architecture.rst
docs/source/user/: configuration.rst  installation.rst
picli/: __init__.py  config.py  shell.py  stage.py  util.py
picli/model/: base_schema.py
tests/functional/: cookiecutter.json  readme_cookiecutter.md
tests/functional/python_project/: .gitlab-ci.yml
tests/functional/python_project/piedpiper.d/default/: config.yml  stages.yml
tests/functional/python_project/piedpiper.d/default/state/: state.yml
tests/functional/{{cookiecutter.global_directory}}/: pi_global_vars.yml
tests/functional/{{cookiecutter.global_directory}}/default_vars.d/group_vars.d/: all.yml  cpp_lint.yml  python_lint.yml
tests/functional/{{cookiecutter.global_directory}}/default_vars.d/pipe_vars.d/: pi_sast.yml  pi_style.yml  pi_validate.yml
tests/unit/: conftest.py  test_config.py  test_stages.py
tests/unit/command/: conftest.py  test_display.py  test_run.py
