[metadata]
name = picli
author = Nick Wilburn
author_email = nwilburn@globalinfote.com
maintainer = AFCYBER DREAM Team
maintainer_email = dream@globalinfotek.com
summary = A pipeline validation and execution framework
license = BSD
description-file = README.md
home-page = https://github.com/AFCYBER-DREAM/piedpiper-picli
project_urls =
	Release Management = https://github.com/AFCYBER-DREAM/piedpiper-picli
	Source Code = https://github.com/AFCYBER-DREAM/piedpiper-picli
requires-python = >=3.6

[extras]
doc = 
	Sphinx

[pbr]
skip_authors = True
skip_changelog = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[options.entry_points]
console_scripts =
  picli = picli.shell:main

[wheel]
universal = 1

[flake8]
max-line-length = 90


